# futuresight

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  code_review.md
docs/: gas-metrics-spec.md
src/: config.rs  data.rs  main.rs  ui.rs
