[package]
name = "futuresight"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.24", features = ["full"] }

tokio = { version = "1", features = ["full"] }
ratatui = "0.28"
crossterm = "0.28"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
alloy-provider = "1.0.24"
alloy-transport-http = { version = "1.0.24", features = ["reqwest"] }
alloy-primitives = "1.0.24"
hex = "0.4"
url = "2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
eyre = "0.6.12"
